<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_health"
        android:title="@string/action_health"
        android:orderInCategory="1"
        android:showAsAction="never" />

    <item android:id="@+id/action_environment"
        android:title="@string/action_environment"
        android:orderInCategory="2"
        android:showAsAction="never" />

    <item android:id="@+id/action_animals"
        android:title="@string/action_animals"
        android:orderInCategory="3"
        android:showAsAction="never" />

    <item android:id="@+id/action_food"
        android:title="@string/action_food"
        android:orderInCategory="4"
        android:showAsAction="never" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider" />
</menu>